delete :: 데이터베이스 연동 테스트 api 삭제
